[gd_scene load_steps=12 format=3 uid="uid://dwxucpdl0c6tb"]

[ext_resource type="Texture2D" uid="uid://bt8w6yq8repob" path="res://Assets/spritesheets/furnace.png" id="1_8qxmj"]
[ext_resource type="Script" uid="uid://b81icrwck86sq" path="res://Scripts/Items/furnace.gd" id="2_vy0ry"]
[ext_resource type="Theme" uid="uid://difjd64jhu5hr" path="res://Assets/Themes/Main.tres" id="3_glnvt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xjikw"]
atlas = ExtResource("1_8qxmj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aag5i"]
atlas = ExtResource("1_8qxmj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uw30"]
atlas = ExtResource("1_8qxmj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt3hl"]
atlas = ExtResource("1_8qxmj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yqspi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjikw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aag5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uw30")
}],
"loop": true,
"name": &"active",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt3hl")
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qxmj"]
size = Vector2(10, 10.1383)

[sub_resource type="Gradient" id="Gradient_glnvt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_he84a"]
gradient = SubResource("Gradient_glnvt")
width = 1

[node name="Furnace" type="AnimatedSprite2D"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_yqspi")
animation = &"active"
autoplay = "active"
frame_progress = 0.865892
script = ExtResource("2_vy0ry")

[node name="Area2D" type="Area2D" parent="."]

[node name="DropShape" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(-1, -7)
shape = SubResource("RectangleShape2D_8qxmj")
debug_color = Color(0, 0.94, 0.0313333, 0.321569)

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = -8.5
offset_top = 8.5
offset_right = 4.5
offset_bottom = 11.5
focus_mode = 0
theme = ExtResource("3_glnvt")
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 2
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_constants/arrow_margin = 1
theme_override_constants/modulate_arrow = 0
theme_override_icons/arrow = SubResource("GradientTexture1D_he84a")
selected = 1
allow_reselect = true
item_count = 3
popup/item_0/text = "Iron ingot"
popup/item_0/id = 0
popup/item_1/text = "Flint & steel"
popup/item_1/id = 1
popup/item_2/text = "I am steve"
popup/item_2/id = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
